--- a/source/_css/typography.scss
+++ b/source/_css/typography.scss
@@ -38,17 +38,21 @@ a {
 @media only screen and (min-width: 600px) {
     p, a {
         font-size: 1.05em;
+        line-height: 1.7em;
     }
     .first {
-        font-size: 1.65em;
+        font-size: 1.72em;
+        line-height: 1.55em;
     }
 }
 
 @media only screen and (min-width: 1000px) {
     p, a {
         font-size: 1.1em;
+        line-height: 1.7em;
     }
     .first {
         font-size: 1.8em;
+        line-height: 1.65em;
     }
 }
